# PS-Experimental

./: README.md
MiddlewareAPI/: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  RELEASE_CHECKLIST.md  bandit.yaml  compose.yaml  mkdocs.yml  pyproject.toml
MiddlewareAPI/.github/workflows/: ci.yml
MiddlewareAPI/config/: registry.example.yaml  registry.test.yaml
MiddlewareAPI/deploy/kubernetes/: configmap.yaml  deployment.yaml  namespace.yaml  network-policy.yaml  pod-disruption-budget.yaml  secret-provider.yaml  service.yaml
MiddlewareAPI/deploy/prometheus/: prometheus.yml
MiddlewareAPI/design/: 2027-07-17-improvment-implementation.md  middle-api-implementation.md  middle-api-srs.md
MiddlewareAPI/docs/: getting-started.md  index.md
MiddlewareAPI/docs/api/: overview.md
MiddlewareAPI/docs/architecture/: context.md  request-flow.md
MiddlewareAPI/docs/operations/: configuration.md  deployment.md  incident-response.md  secret-rotation.md
MiddlewareAPI/notes/: 2pager.md  middle-sketch-srs.md  whatthisis.md
MiddlewareAPI/scripts/: export_openapi.py  validate_registry.py
MiddlewareAPI/src/content_resource_api/: __init__.py  __main__.py
MiddlewareAPI/src/content_resource_api/application/: commands.py  evaluate_health.py  get_resource.py  list_resources.py  results.py
MiddlewareAPI/src/content_resource_api/config/: constants.py  registry_models.py  settings.py
MiddlewareAPI/src/content_resource_api/domain/: authorization.py  conditional_requests.py  content_types.py  enums.py  errors.py  models.py  validators.py  values.py
MiddlewareAPI/src/content_resource_api/ports/: audit.py  authentication.py  clock.py  content_repository.py  identifiers.py  metrics.py  registry.py  secrets.py
MiddlewareAPI/tests/: conftest.py
MiddlewareAPI/tests/acceptance/: conftest.py  test_authentication.py  test_conditional_requests.py  test_health.py  test_listing.py  test_observability.py  test_read_only_boundary.py  test_registry_and_paths.py  test_retrieval.py  test_upstream_failures.py
MiddlewareAPI/tests/doubles/: authentication.py  content_repository.py
MiddlewareAPI/tests/integration/: test_http_api.py
MiddlewareAPI/tests/performance/: locustfile.py  test_benchmarks.py
MiddlewareAPI/tests/security/: conftest.py  test_credential_conflicts.py  test_header_injection.py  test_log_redaction.py  test_oversized_inputs.py  test_traversal.py
MiddlewareAPI/tests/unit/: test_error_handlers.py
MiddlewareAPI/tests/unit/adapters/: test_redaction.py  test_registry.py  test_webdav_mapping.py
MiddlewareAPI/tests/unit/application/: test_get_resource.py
MiddlewareAPI/tests/unit/domain/: test_authorization.py  test_conditional_requests.py  test_content_types.py  test_errors.py  test_validators.py
WebDav/: README.md  WARNING.md
WebDav/python/: .env.example  README.md  pyproject.toml
WebDav/python/src/heretto_webdav/: __init__.py  client.py
WebDav/python/src/use_cases/: 01_list_resources.py  02_download_resource.py  03_upload_resource.py  04_delete_resource.py  05_create_directory.py  06_export_taxonomy.py  07_sync_directory.py
_source/: CCMSAPI.txt  (+2 more)
(+51 files in other folders)
